# agent-sim

./: CHANGELOG.md  EVAL.md  README.md  pyproject.toml
examples/: ping_pong.py
scenarios/: collaborate.yaml  debate.yaml  ping_pong.yaml  team_collaborate.yaml  tool_demo.yaml
src/agent_sim/: __init__.py  agent.py  cli.py  communication.py  config.py  debate_agent.py  environment.py  evaluator.py  exceptions.py  export.py  hooks.py  llm_agent.py  log.py  logging.py  message.py  metrics.py  scenario.py  tool_agent.py  topology.py  viz.py
src/agent_sim/agent/: __init__.py  base.py  debate_agent.py  health_monitor.py  llm_agent.py  llm_backend.py  memory_agent.py  openai_backend.py  rate_limiter.py  retry.py  role.py  tool_agent.py
src/agent_sim/communication/: __init__.py  bus.py  correlation.py  event_bus.py  message.py  middleware.py
src/agent_sim/environment/: __init__.py  sandbox.py  state.py
src/agent_sim/memory/: __init__.py  buffer.py  facts.py
src/agent_sim/metrics/: __init__.py  aggregator.py  collector.py  evaluator.py
src/agent_sim/scenario/: __init__.py  batch.py  benchmark.py  checkpoint.py  config.py  factory.py  hooks.py  monitor.py  plugins.py  protocol.py  recorder.py  replay.py  runner.py  templates.py  topology_scheduler.py  validation.py
src/agent_sim/topology/: __init__.py  dynamic.py  topology.py
src/agent_sim/viz/: __init__.py  charts.py  conversation_graph.py
tests/: conftest.py  test_advanced_evaluators.py  test_agent.py  test_communication.py  test_config.py  test_debate_agent.py  test_environment.py  test_evaluator.py  test_export.py  test_hooks.py  test_integration.py  test_llm_agent.py  test_llm_backends.py  test_logging.py  test_memory.py  test_message.py  test_metrics.py  test_openai_backend.py  test_scenario.py  test_tool_agent.py  test_topology.py  test_v050_features.py  test_v060_features.py  test_v070_features.py  test_v080_features.py  test_v090_features.py  test_v100_features.py  test_viz.py
