[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-sim"
version = "1.0.0"
description = "Multi-agent simulation framework for testing agent communication, coordination, and evaluation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "click>=8.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
agent-sim = "agent_sim.cli:main"

[project.urls]
Homepage = "https://github.com/Jane-o-O-o-O/agent-sim"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_sim = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
